--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
